add testing and external projects

--- a/src/core/CMakeLists.txt
+++ b/src/core/CMakeLists.txt
@@ -2,23 +2,22 @@ set(NAME wiko-core)
 
 project(${NAME})
 
-set(HDRS
+add_library(${NAME}
     include/wiko-core/core.h
-    )
-
-set(SRCS
     src/core.cpp
     )
 
-add_library(${NAME} ${HDRS} ${SRCS})
+target_include_directories(${NAME} PUBLIC "include")
 
-target_include_directories(${NAME} PUBLIC include)
-
-set(TST_NAME "${NAME}-test")
-add_executable(${TST_NAME}
-    tests/main.cpp
-    tests/test-logging.cpp
-    )
-
-# target_link_libraries(${TST_NAME} wiko-core gtest)
-
+if (WIKO_BUILD_TESTS)
+    set(TST_NAME "${NAME}-test")
+    add_executable(${TST_NAME}
+        tests/main.cpp
+        tests/test-logging.cpp
+        )
+    add_test(NAME "${TST_NAME}" COMMAND ${TST_NAME})
+    target_link_libraries(${TST_NAME}
+        googletest
+        wiko-core
+        )
+endif()
