--- a/src/gpu/CMakeLists.txt
+++ b/src/gpu/CMakeLists.txt
@@ -2,25 +2,25 @@ set(NAME wiko-gpu)
 
 project(${NAME})
 
-set(HDRS
+add_library(${NAME}
     include/wiko-gpu/gpu.h
-    )
-
-set(SRCS
     src/gpu.cpp
     )
-
-add_library(${NAME} ${HDRS} ${SRCS})
-target_include_directories(${NAME} PUBLIC include)
+    
+target_include_directories(${NAME} PUBLIC "include")
 target_link_libraries(${NAME}
     wiko-core
     )
 
-set(TST_NAME "${NAME}-test")
-add_executable(${TST_NAME}
-    tests/main.cpp
-    tests/test-gpu.cpp
-    )
-
-# target_link_libraries(${TST_NAME} wiko-gpu gtest)
-
+if (WIKO_BUILD_TESTS)
+    set(TST_NAME "${NAME}-test")
+    add_executable(${TST_NAME}
+        tests/main.cpp
+        tests/test-gpu.cpp
+        )
+    add_test(NAME "${TST_NAME}" COMMAND ${TST_NAME})
+    target_link_libraries(${TST_NAME}
+        googletest
+        wiko-gpu
+        )
+endif()
